--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.345.0",
     "@aws-sdk/s3-request-presigner": "^3.345.0",
+    "compression": "^1.7.4",
     "connect-mongo": "^3.2.0",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.1",
+    "helmet": "^7.1.0",
     "moment": "^2.29.4",
     "mongoose": "^7.2.0",
     "nodemon": "^3.1.0",
